--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -43,6 +43,12 @@ h1 {
     margin: 0;
 }
 
+.movie-item img {
+    max-width: 100px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
 .button {
     display: inline-block;
     font-size: 16px;
